kubernetes/02-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gateway-reference
  labels:
    system: gateway-reference
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        system: gateway-reference
    spec:
      containers:
      - name: backend
        image: ssanders0/ptp-backend:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256M
            cpu: 100m
          limits:
            memory: 1G
            cpu: 1
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
        volumeMounts:
          - name: postgresql-secret
            mountPath: "/bindings/postgres"
            readOnly: true
      volumes:
        - name: postgresql-secret
          secret:
            secretName: postgresql-svcbind-custom-user
