kubernetes/02-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gateway-reference
  labels:
    system: gateway-reference
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        system: gateway-reference
    spec:
      containers:
      - name: frontend
        image: ssanders0/ptp-frontend@sha256:1207f89a25ddd7f8cc5554469e5d4d48f82e18614e1460b41506766f263d782f
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256M
            cpu: 100m
          limits:
            memory: 1G
            cpu: 1
        livenessProbe:
          httpGet:
            path: /stub_status
            port: 8081
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /stub_status
            port: 8081
            scheme: HTTP
