kubernetes/02-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: gateway-reference
  labels:
    system: gateway-reference
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
        system: gateway-reference
    spec:
      containers:
      - name: gateway
        image: ssanders0/ptp-gateway:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256M
            cpu: 100m
          limits:
            memory: 1G
            cpu: 1
        volumeMounts:
          - name: spring-config
            mountPath: "/workspace/config"
      volumes:
        - name: spring-config
          configMap:
            name: gateway-config
