kubernetes/01-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: gateway-reference
  labels:
    app: gateway
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  selector:
    app: gateway
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
