kubernetes/03-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: gateway-reference
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: gateway.eks.samsanders.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
